# audio-track-comparator

./: .gitattributes  .gitignore  Cargo.toml  README.md
scripts/: export_clap_onnx.py  export_emotion_models.py  export_genre_model.py  export_instrument_model.py  export_quality_models.py  export_similarity_model.py  export_vggish_onnx.py  test_stem_captioning.py
src/: backbone.rs  bpm.rs  clap_model.rs  decode.rs  diff.rs  genre.rs  instruments.rs  key.rs  main.rs  model_cache.rs  output.rs  pipeline.rs  quality.rs  resample.rs  similarity.rs  vocab.rs
