[package]
name = "audio-track-comparator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "audio-track-comparator"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
symphonia = { version = "0.5", features = ["mp3"] }
rubato = "0.15"
rustfft = "6"
aubio-rs = { version = "0.2", features = ["builtin"] }
ndarray = "0.17"
ort = { version = "2.0.0-rc.12", features = ["download-binaries", "ndarray"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
dirs = "5"
